[metadata]
name = healing
summary = healing
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    healing

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = healing/locale
domain = healing

[update_catalog]
domain = healing
output_dir = healing/locale
input_file = healing/locale/healing.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = healing/locale/healing.pot


[entry_points]
healing.handlers =
    evacuate = healing.handler_plugins.evacuate:Evacuate
    resize = healing.handler_plugins.resize:Resize
    mistral = healing.handler_plugins.mistral:Mistral
    nova_show = healing.handler_plugins.show_instance:InstanceShow
    suspend = healing.handler_plugins.suspend:Suspend
    
healing.handler_restrictions =
    timeinterval = healing.handler_plugins.restrictions.base:TimeIntervalRestriction    
    actionstatus = healing.handler_plugins.restrictions.base:ActionStatusRestriction    
